--- a/index.html
+++ b/index.html
@@ -5,6 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact App</title>
     <link rel="icon" href="./public/fav-icon.svg" />
+    <!-- Primary Meta Tags -->
+    <title>Contact Application</title>
+    <meta name="title" content="Contact Application" />
+    <meta
+      name="description"
+      content="This  app is contact app with real API services using RTK Query and react .In this app, you can create or update or delete your contact information. All this changes will effect to API services."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://han-htun-aung-portfolio.netlify.app/"
+    />
+    <meta property="og:title" content="Contact Application" />
+    <meta
+      property="og:description"
+      content="This  app is contact app with real API services using RTK Query and react .In this app, you can create or update or delete your contact information. All this changes will effect to API services."
+    />
+    <meta property="og:image" content="./public/cover.PNG" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://han-htun-aung-portfolio.netlify.app/"
+    />
+    <meta property="twitter:title" content="Contact Application" />
+    <meta
+      property="twitter:description"
+      content="This  app is contact app with real API services using RTK Query and react .In this app, you can create or update or delete your contact information. All this changes will effect to API services."
+    />
+    <meta property="twitter:image" content="./public/cover.PNG" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
   </head>
   <body>
     <div id="root"></div>
